# dda-project-starter

./: .gitignore  README.md  pyproject.toml
src/main/: __init__.py  db.py  note.py  schema.sql
src/main/templates/: base.html
src/main/templates/note/: index.html
