[tool.poetry]
name = "dda-project-starter"
version = "0.1.0"
description = ""
authors = ["Saurabh Rautela <saurabhrautela@pm.me>"]
readme = "README.md"
packages = [{include = "dda_project_starter"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
jinja2 = "^3.1.2"
flask-wtf = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
